--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ body {
     text-align: center;
 }
 
+p {
+    text-align: center;
+}
+
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
